--- a/BlazorApp/Components/Pages/Dashboard.razor
+++ b/BlazorApp/Components/Pages/Dashboard.razor
@@ -19,7 +19,7 @@
                         <h3>April 16, 2024 at 4:00 PM </h3>
                     </div>
                     <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="#">
+                        <NavLink class="nav-link" href="EventCalendar">
                             <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
                         </NavLink>
                     </div>
