--- a/BlazorApp/Components/Pages/Event.razor
+++ b/BlazorApp/Components/Pages/Event.razor
@@ -40,35 +40,10 @@
 <div class="table-container">
             
     <table cellpadding="30px" style="width: 60%; height: fit-content;  border-collapse: collapse;">
-        <tr height="20px">
-            <td><label id="matchminl"  for="matchmin">Number of Matches Per Wrestler: </label></td>
-            <td><InputNumber style="border: solid; border-radius: 50px; border-color: rgb(183, 183, 183);"  TValue="int" @bind-Value="@_matchMin"/></td>
-            <td><InputNumber style="border: solid;  border-radius: 50px; border-color: rgb(183, 183, 183);" class="text-input" TValue="int" @bind-Value="@_matchMax" /></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><label id="skillL" for="skill">Skill level Difference: </label></td>
-            <td><InputNumber style="border: solid;  border-radius: 50px; border-color: rgb(183, 183, 183);" TValue="int" @bind-Value="_skillGap"/></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><label id="gradeL" for="grade">Grade Level Difference: </label></td>
-            <td><InputNumber style="border: solid;  border-radius: 50px; border-color: rgb(183, 183, 183);" TValue="int" @bind-Value="_gradeGap" id="grade" name="grade"/></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td><label id="matsl" for="mats">Number of Mats: </label></td>
-            <td><InputNumber style="border: solid;  border-radius: 50px; border-color: rgb(183, 183, 183);" TValue="int" @bind-Value="_numMats"/></td>
-            <td><label id="matchschoolL" for="matchmax">Allow Internal Matches: </label></td>
-            <td><input class="text_input" type="checkbox" id="matchSchool" @bind="_internalMatches" name="matchSchool"/></td>
-        </tr>
+        
         <tr style="height: auto">
             
             <td><label>Match Date: </label></td>
-            <!--<td> <TelerikDateTimePicker Format="dd/MM/yyyy HH:mm" Width="200px"></TelerikDateTimePicker> </td>-->
             <td><InputDate @bind-Value="selectedDate" ></InputDate></td>
             
         </tr>
@@ -76,7 +51,7 @@
     
     <table style="caption-side: top; text-align: center;  width: 25%; border-left-style: solid; border-color: #ededed; border-right: none; border-top: none; border-color: #ededed; border-collapse: collapse">
                     
-        <caption class="main-title" style=" font-family: 'Helvetica Neue',serif; text-align: center; border-top-style: none; border-right: none">
+        <caption  class="main-title" style=" text-align: center !important; display: table-caption !important;  font-family: 'Helvetica Neue',serif;  border-top-style: none; border-right: none">
             <div>Guests</div>
             
             <div class="dropdown">
@@ -191,15 +166,27 @@
     
     private async void addEvent() {
         string email = await GetSavedEmail();
-        string EventID = $"{hostProfile.schoolName}_Event{hostProfile.Events.Count + 1}";
-        string guestListID = $"{EventID}_GuestList";
-        Structure.Event evt = new Structure.Event(EventID, hostProfile.school, guestListID, selectedDate);
-        //double weightMinDouble = Double.Parse(_weightMin);
-        //double weightMaxDouble = Double.Parse(_weightMax);
-        double weightDiffDouble = Double.Parse(_weightDiff);
-        //evt.weightMax = weightMaxDouble;
-        //evt.weightMin = weightMinDouble;
+        int EventID = 1;//placeholder for testing
+        int LocalHostID = hostProfile.id;
         
+        /* **CALL DB TO ACCESS EVENTS TABLE
+         *
+         * Add event to table:
+         * 
+         ***** INSERT into EVENTS (HostID, Date);
+         *
+         * Get Event ID from Database to construct Local Event Object:
+         * 
+         *****[ SELECT id FROM Events WHERE (HostID == LocalHostID); ]
+         */
+        
+        
+        Structure.Event evt = new Structure.Event(EventID, LocalHostID, selectedDate);
+        
+        
+        
+        
+        double weightDiffDouble = Double.Parse(_weightDiff);
         evt.gradeGap = _gradeGap;
         evt.minMatches = _matchMin;
         evt.maxMatches = _matchMax;
@@ -209,8 +196,11 @@
         evt.allowedMatches = _matchMax;
         evt.internalMatches = _internalMatches;
         evt.guestList = LocalGuestList;
+        
+        
+        
 
-        /**
+        /*
         * uncomment this block when'getRosterBySchoolName' can populate a roster from a given guest school name
         */
         for (int i = 0; i < evt.guestList.Count; i++) {
@@ -223,7 +213,7 @@
         }
         
         
-        /**
+        /*
          * add dbcall to use guest schoolnames to get an array of guest rosters
          */
          
