EventViewer.razor, EventViewer.razor.css Updates

--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -37,7 +37,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="#">
+            <NavLink class="nav-link" href="/EventViewer">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
                     <path
                         fill="white"
