--- a/BlazorApp/Components/Pages/EventViewer.razor
+++ b/BlazorApp/Components/Pages/EventViewer.razor
@@ -3,6 +3,7 @@
 @using DataAccessLibrary
 @using Structure
 @using System.Collections.Generic
+@using Microsoft.EntityFrameworkCore.ChangeTracking.Internal
 @inject NavigationManager navManager
 
 
@@ -26,7 +27,7 @@
             <tr style="background-color: azure ">
 
                 <td>@(events.ToList().IndexOf(e) + 1)</td>
-                <td> <button class="btn btn-primary" @onclick="showEventCriteria">@e.date</button></td>
+                <td> <button class="btn btn-primary" @onclick="showEventCriteria" @onclick="linkEventID(@e)">@e.date</button></td>
                 <td><!--db.loadData(SELECT schoolName from PROFILES where ID == @e.host--></td>
             </tr>
         }
@@ -103,6 +104,8 @@
         isVisible = !isVisible;
     }
 
+    private int SelectedEventID;
+    
     List<Structure.Event> events;
     private int testEventId = 1;
     private int testEventID2 = 2;
@@ -171,10 +174,11 @@
     
     Structure.Roster roster = new Structure.Roster(testSchoolName);
     Structure.Roster[] guestRosters = new[] {new Structure.Roster(testSchoolName2)};
+    
     private void GenerateMatches() {
         //instantiating new MatchGenerator Object
         MatchGenerator matchGen = new MatchGenerator(roster, guestRosters, _weightDiff,
-            _numMats, _matchMin, _matchMax, _skillGap, _gradeGap, _internalMatches, testEventId);
+            _numMats, _matchMin, _matchMax, _skillGap, _gradeGap, _internalMatches, SelectedEventID);
         
         //matchGet.GenerateMatches returns a LinkedList<Match> of all generated matches
         LinkedList<Match> matchList = matchGen.GenerateMatches(false, 3);
@@ -187,13 +191,21 @@
              *
              *Add individual matches per loop iteration:
              * 
-             * INSERT INTO Matches (EventID2, Wrestler1ID, Wrestler2ID) VALUES (EventID, Wrestler1ID, Wrestler2ID);
+             * INSERT INTO Matches (EventID, Wrestler1ID, Wrestler2ID) VALUES (EventID, Wrestler1ID, Wrestler2ID);
              * 
              */
             //
         }
 
         navManager.NavigateTo("/MatchViewer");
+    }
+
+    
+    
+    private void linkEventID(Structure.Event e) {
+        SelectedEventID = e.EventID;
+
+
     }
 
     
