--- a/BlazorApp/Components/Layout/LandingLayout.razor.css
+++ b/BlazorApp/Components/Layout/LandingLayout.razor.css
@@ -14,8 +14,6 @@ main {
 }
 
 .top-row {
-    /*background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
-     */
     background-color: #022733;
     border-bottom: 1px solid #000000;
     justify-content: flex-end;
@@ -24,7 +22,7 @@ main {
     align-items: center;
 }
 .top-row h2 {
-    margin: 0 auto; /* Remove default margin to center properly */
+    margin: 0 auto;
     text-align: left;
     justify-content: flex-start;
     flex: 1;
